--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_GOOGLE_MAPS_API_KEY="AIzaSyC6W53m4fuZT4Viq3S9K_IitlPf4wA29_s"
+VITE_CLIENT_ID="464181178139-i77tmtip316tbkthg17l471shd4hcggb.apps.googleusercontent.com"
