--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^5.3.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.26.1",
+    "recharts": "^2.12.7",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
