--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@react-google-maps/api": "^2.19.3",
     "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -34,6 +35,7 @@
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
     "react-phone-input-2": "^2.15.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
