--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 VITE_GOOGLE_MAPS_API_KEY="AIzaSyC6W53m4fuZT4Viq3S9K_IitlPf4wA29_s"
 VITE_CLIENT_ID="464181178139-i77tmtip316tbkthg17l471shd4hcggb.apps.googleusercontent.com"
+VITE_GOOGLE_CLIENT_ID="752967145269-cl0b5p10em2b9o8m8gmmph2hjs4o46d6.apps.googleusercontent.com"
+VITE_BACKEND_URL="http://localhost:5000/api/v1"
