--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ VITE_GOOGLE_CLIENT_ID="752967145269-cl0b5p10em2b9o8m8gmmph2hjs4o46d6.apps.google
 VITE_BACKEND_URL="http://localhost:5000/api/v1"
 VITE_SOCKET_URL="http://localhost:5000"
 VITE_IMAGE_URL="http://localhost:5000"
+VITE_APP_RAZORPAY_API_KEY="rzp_test_6Jk9Vz0d3WgZRC"
